<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="disabled">Disabled</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Discard</string>
    <string name="navigation_settings_title">Navigation</string>
    <string name="interface_settings_title">System Tuner</string>
    <string name="advanced_settings">Advanced</string>
    <string name="quick_settings">Quick Settings Tiles</string>
    <string name="qs_options_title">Quick Settings Options</string>
    <string name="status_bar_icons">Status bar icons</string>
    <string name="navigation_settings_options_title">Navigation options</string>
    <string name="app_ops_categories_location">Location</string>
    <string name="app_ops_categories_personal">Personal</string>
    <string name="app_ops_categories_messaging">Messaging</string>
    <string name="app_ops_categories_media">Media</string>
    <string name="app_ops_categories_device">Device</string>
    <string name="app_ops_categories_bootup">Bootup</string>
    <string name="app_ops_categories_su">Superuser</string>
    <string name="app_ops_summaries_coarse_location">coarse location</string>
    <string name="app_ops_summaries_fine_location">fine location</string>
    <string name="app_ops_summaries_gps">GPS</string>
    <string name="app_ops_summaries_vibrate">vibrate</string>
    <string name="app_ops_summaries_read_contacts">read contacts</string>
    <string name="app_ops_summaries_modify_contacts">modify contacts</string>
    <string name="app_ops_summaries_read_call_log">read call log</string>
    <string name="app_ops_summaries_modify_call_log">modify call log</string>
    <string name="app_ops_summaries_read_calendar">read calendar</string>
    <string name="app_ops_summaries_modify_calendar">modify calendar</string>
    <string name="app_ops_summaries_wifi_scan">Wi-Fi scan</string>
    <string name="app_ops_summaries_notification">notification/toast</string>
    <string name="app_ops_summaries_cell_scan">cell scan</string>
    <string name="app_ops_summaries_call_phone">call phone</string>
    <string name="app_ops_summaries_read_sms">read SMS</string>
    <string name="app_ops_summaries_write_sms">write SMS</string>
    <string name="app_ops_summaries_receive_sms">receive SMS</string>
    <string name="app_ops_summaries_receive_emergency_sms">receive emergency SMS</string>
    <string name="app_ops_summaries_receive_mms">receive MMS</string>
    <string name="app_ops_summaries_receive_wap_push">receive WAP push</string>
    <string name="app_ops_summaries_send_sms">send SMS</string>
    <string name="app_ops_summaries_read_icc_sms">read ICC SMS</string>
    <string name="app_ops_summaries_write_icc_sms">write ICC SMS</string>
    <string name="app_ops_summaries_modify_settings">modify settings</string>
    <string name="app_ops_summaries_draw_on_top">draw on top</string>
    <string name="app_ops_summaries_access_notifications">access notifications</string>
    <string name="app_ops_summaries_camera">camera</string>
    <string name="app_ops_summaries_record_audio">record audio</string>
    <string name="app_ops_summaries_play_audio">play audio</string>
    <string name="app_ops_summaries_read_clipboard">read clipboard</string>
    <string name="app_ops_summaries_modify_clipboard">modify clipboard</string>
    <string name="app_ops_summaries_media_buttons">media buttons</string>
    <string name="app_ops_summaries_audio_focus">audio focus</string>
    <string name="app_ops_summaries_master_volume">master volume</string>
    <string name="app_ops_summaries_voice_volume">voice volume</string>
    <string name="app_ops_summaries_ring_volume">ring volume</string>
    <string name="app_ops_summaries_media_volume">media volume</string>
    <string name="app_ops_summaries_alarm_volume">alarm volume</string>
    <string name="app_ops_summaries_notification_volume">notification volume</string>
    <string name="app_ops_summaries_bluetooth_volume">bluetooth volume</string>
    <string name="app_ops_summaries_keep_awake">keep awake</string>
    <string name="app_ops_summaries_monitor_location">monitor location</string>
    <string name="app_ops_summaries_monitor_high_power_location">monitor high power location</string>
    <string name="app_ops_summaries_get_usage_stats">get usage stats</string>
    <string name="app_ops_summaries_mute_unmute_microphone">mute/unmute microphone</string>
    <string name="app_ops_summaries_toast_window">display toasts</string>
    <string name="app_ops_summaries_project_media">project media</string>
    <string name="app_ops_summaries_activate_vpn">activate VPN</string>
    <string name="app_ops_summaries_write_wallpaper">write wallpaper</string>
    <string name="app_ops_summaries_assist_structure">assist structure</string>
    <string name="app_ops_summaries_assist_screenshot">assist screenshot</string>
    <string name="app_ops_summaries_read_phone_state">read phone state</string>
    <string name="app_ops_summaries_add_voicemail">add voicemail</string>
    <string name="app_ops_summaries_use_sip">use SIP</string>
    <string name="app_ops_summaries_make_call">make call</string>
    <string name="app_ops_summaries_use_fingerprint">use fingerprint</string>
    <string name="app_ops_summaries_use_body_sensors">use body sensors</string>
    <string name="app_ops_summaries_read_cell_broadcasts">read cell broadcasts</string>
    <string name="app_ops_summaries_mock_location">mock location</string>
    <string name="app_ops_summaries_read_external_storage">read external storage</string>
    <string name="app_ops_summaries_write_external_storage">write to external storage</string>
    <string name="app_ops_summaries_turn_screen_on">turn screen on</string>
    <string name="app_ops_summaries_get_accounts">get accounts</string>
    <string name="app_ops_summaries_toggle_wifi">toggle Wi-Fi</string>
    <string name="app_ops_summaries_toggle_bluetooth">toggle bluetooth</string>
    <string name="app_ops_summaries_start_at_boot">start at boot</string>
    <string name="app_ops_summaries_toggle_nfc">toggle NFC</string>
    <string name="app_ops_summaries_toggle_mobile_data">toggle mobile data</string>
    <string name="app_ops_summaries_superuser">root access</string>
    <string name="app_ops_labels_coarse_location">Coarse location</string>
    <string name="app_ops_labels_fine_location">Fine location</string>
    <string name="app_ops_labels_gps">GPS</string>
    <string name="app_ops_labels_vibrate">Vibrate</string>
    <string name="app_ops_labels_read_contacts">Read contacts</string>
    <string name="app_ops_labels_modify_contacts">Modify contacts</string>
    <string name="app_ops_labels_read_call_log">Read call log</string>
    <string name="app_ops_labels_modify_call_log">Modify call log</string>
    <string name="app_ops_labels_read_calendar">Read calendar</string>
    <string name="app_ops_labels_modify_calendar">Modify calendar</string>
    <string name="app_ops_labels_wifi_scan">Wi-Fi scan</string>
    <string name="app_ops_labels_notification">Notification/Toast</string>
    <string name="app_ops_labels_cell_scan">Cell scan</string>
    <string name="app_ops_labels_call_phone">Call phone</string>
    <string name="app_ops_labels_read_sms">Read SMS</string>
    <string name="app_ops_labels_write_sms">Write SMS</string>
    <string name="app_ops_labels_receive_sms">Receive SMS</string>
    <string name="app_ops_labels_receive_emergency_sms">Receive emergency SMS</string>
    <string name="app_ops_labels_receive_mms">Receive MMS</string>
    <string name="app_ops_labels_receive_wap_push">Receive WAP push</string>
    <string name="app_ops_labels_send_sms">Send SMS</string>
    <string name="app_ops_labels_read_icc_sms">Read ICC SMS</string>
    <string name="app_ops_labels_write_icc_sms">Write ICC SMS</string>
    <string name="app_ops_labels_modify_settings">Modify settings</string>
    <string name="app_ops_labels_draw_on_top">Draw on top</string>
    <string name="app_ops_labels_access_notifications">Access notifications</string>
    <string name="app_ops_labels_camera">Camera</string>
    <string name="app_ops_labels_record_audio">Record audio</string>
    <string name="app_ops_labels_play_audio">Play audio</string>
    <string name="app_ops_labels_read_clipboard">Read clipboard</string>
    <string name="app_ops_labels_modify_clipboard">Modify clipboard</string>
    <string name="app_ops_labels_media_buttons">Media buttons</string>
    <string name="app_ops_labels_audio_focus">Audio focus</string>
    <string name="app_ops_labels_master_volume">Master volume</string>
    <string name="app_ops_labels_voice_volume">Voice volume</string>
    <string name="app_ops_labels_ring_volume">Ring volume</string>
    <string name="app_ops_labels_media_volume">Media volume</string>
    <string name="app_ops_labels_alarm_volume">Alarm volume</string>
    <string name="app_ops_labels_notification_volume">Notification volume</string>
    <string name="app_ops_labels_bluetooth_volume">Bluetooth volume</string>
    <string name="hardware_keys_lights_enable_title">Hardware key lights settings</string>
    <string name="enable_hw_keys_title">Enable Hardware Buttons</string>
    <string name="keys_bindings_title">Key actions</string>
    <string name="keys_enable_custom_title">Enable custom actions</string>
    <string name="keys_enable_custom_summary">Enable custom hardware key actions</string>
    <string name="keys_back_press_title">Back key</string>
    <string name="keys_home_press_title">Home key</string>
    <string name="keys_menu_press_title">Menu key</string>
    <string name="keys_assist_press_title">Search key</string>
    <string name="keys_app_switch_press_title">App switch key</string>
    <string name="keys_camera_press_title">Camera key</string>
    <string name="keys_action_normal">Normal press</string>
    <string name="keys_action_long">Long press</string>
    <string name="keys_action_double">Double tap</string>
    <string name="keys_volume_key_title">Volume key actions</string>
    <string name="volume_keys_control_media_stream">Media volume control</string>
    <string name="volume_keys_control_media_stream_on_summary">Volume keys control media volume</string>
    <string name="volume_keys_control_media_stream_off_summary">Volume keys control notifications volume</string>
    <string name="swap_volume_buttons_title">Swap volume buttons</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when screen is rotated</string>
    <string name="bt_absolute_volume_control">BT Absolute volume control</string>
    <string name="bt_absolute_volume_control_on_summary">Volume keys control BT Absolute volume</string>
    <string name="bt_absolute_volume_control_off_summary">Volume keys control Media volume</string>
    <string name="hdmi_volume_ctrl">Volume control for HDMI output (Reboot required to activate!)</string>
    <string name="hdmi_volume_ctrl_on_summary">Volume buttons adjust HDMI output volume</string>
    <string name="hdmi_volume_ctrl_off_summary">Volume buttons switch between Max volume and Mute</string>
    <string name="volume_steps_title">Volume steps</string>
    <string name="media_scanner_on_boot">MediaScanner behavior on boot</string>
    <string name="media_scanner_on_boot_on_summary">Scan media (default)</string>
    <string name="media_scanner_on_boot_off_summary">Do not scan media</string>
    <string name="safe_headset_volume_title">Safe headset volume</string>
    <string name="safe_headset_volume_summary">Prevent high volume levels when headset is plugged in</string>
    <string name="advanced_sound_title">Advanced Media settings</string>
    <string name="less_notification_sounds_title">Less frequent notification sounds</string>
    <string name="less_notification_sounds_summary">Notification sounds of each app will play once per set time period</string>
</resources>