<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 SlimRoms Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/advanced_sound_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <!-- Media Scanner boot behavior -->
    <org.slim.preference.SlimSystemSettingSwitchPreference
        android:key="media_scanner_on_boot"
        android:title="@string/media_scanner_on_boot"
        android:defaultValue="true"
        android:summaryOn="@string/media_scanner_on_boot_on_summary"
        android:summaryOff="@string/media_scanner_on_boot_off_summary" />

    <!-- Volume Steps -->
    <PreferenceScreen
        android:key="volume_steps"
        android:title="@string/volume_steps_title"
        android:fragment="com.android.settings.slim.VolumeSteps" />

    <org.slim.preference.SlimSystemSettingSwitchPreference
        android:key="safe_headset_volume"
        android:title="@string/safe_headset_volume_title"
        android:summary="@string/safe_headset_volume_summary"
        android:defaultValue="true"/>

    <!-- Bluetooth Absolute Volume control -->
    <org.slim.preference.SlimGlobalSettingSwitchPreference
        android:key="bt_abs_vol_ctrl_enabled"
        android:title="@string/bt_absolute_volume_control"
        android:defaultValue="true"
        android:summaryOn="@string/bt_absolute_volume_control_on_summary"
        android:summaryOff="@string/bt_absolute_volume_control_off_summary" />

    <!-- HDMI Volume control -->
    <org.slim.preference.SlimGlobalSettingSwitchPreference
        android:key="hdmi_volume_ctrl_enabled"
        android:title="@string/hdmi_volume_ctrl"
        android:defaultValue="false"
        android:summaryOn="@string/hdmi_volume_ctrl_on_summary"
        android:summaryOff="@string/hdmi_volume_ctrl_off_summary" />

    <ListPreference
        android:key="less_notification_sounds"
        android:title="@string/less_notification_sounds_title"
        android:summary="@string/less_notification_sounds_summary"
        android:entries="@array/less_notification_sounds_entries"
        android:entryValues="@array/less_notification_sounds_values"
        android:persistent="false" />

</PreferenceScreen>
