<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2016 SlimRoms Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

        <PreferenceCategory
                android:key="button_keys"
                android:title="@string/keys_bindings_title" >

            <SwitchPreference
                android:key="enable_hw_keys"
                android:title="@string/enable_hw_keys_title"
                android:defaultValue="true" />

            <com.android.settings.slim.ButtonBacklightBrightness
                android:dependency="enable_hw_keys"
                android:key="button_backlight"
                android:title="@string/hardware_keys_lights_enable_title"
                android:persistent="false" />

            <SwitchPreference
                android:dependency="enable_hw_keys"
                android:key="enable_hardware_rebind"
                android:title="@string/keys_enable_custom_title"
                android:summary="@string/keys_enable_custom_summary" />

        </PreferenceCategory>

        <PreferenceCategory
            android:key="button_keys_back"
            android:title="@string/keys_back_press_title" >

            <Preference
                android:key="keys_back_press"
                android:title="@string/keys_action_normal"
                android:dependency="enable_hardware_rebind" />

            <Preference
                android:key="keys_back_long_press"
                android:title="@string/keys_action_long"
                android:dependency="enable_hardware_rebind" />

            <Preference
                android:key="keys_back_double_tap"
                android:title="@string/keys_action_double"
                android:dependency="enable_hardware_rebind" />
        </PreferenceCategory>

        <PreferenceCategory
            android:key="button_keys_camera"
            android:title="@string/keys_camera_press_title" >

            <Preference
                android:key="keys_camera_press"
                android:title="@string/keys_action_normal"
                android:dependency="enable_hardware_rebind" />

            <Preference
                android:key="keys_camera_long_press"
                android:title="@string/keys_action_long"
                android:dependency="enable_hardware_rebind" />

            <Preference
                android:key="keys_camera_double_tap"
                android:title="@string/keys_action_double"
                android:dependency="enable_hardware_rebind" />
        </PreferenceCategory>

        <PreferenceCategory
            android:key="button_keys_home"
            android:title="@string/keys_home_press_title">

            <Preference
                android:key="keys_home_press"
                android:title="@string/keys_action_normal"
                android:dependency="enable_hardware_rebind" />

            <Preference
                android:key="keys_home_long_press"
                android:title="@string/keys_action_long"
                android:dependency="enable_hardware_rebind" />

            <Preference
                android:key="keys_home_double_tap"
                android:title="@string/keys_action_double"
                android:dependency="enable_hardware_rebind" />
        </PreferenceCategory>

        <PreferenceCategory
            android:key="button_keys_menu"
            android:title="@string/keys_menu_press_title">

            <Preference
                android:key="keys_menu_press"
                android:title="@string/keys_action_normal"
                android:dependency="enable_hardware_rebind" />

            <Preference
                android:key="keys_menu_long_press"
                android:title="@string/keys_action_long"
                android:dependency="enable_hardware_rebind" />

            <Preference
                android:key="keys_menu_double_tap"
                android:title="@string/keys_action_double"
                android:dependency="enable_hardware_rebind" />
        </PreferenceCategory>

        <PreferenceCategory
            android:key="button_keys_assist"
            android:title="@string/keys_assist_press_title">

            <Preference
                android:key="keys_assist_press"
                android:title="@string/keys_action_normal"
                android:dependency="enable_hardware_rebind" />

            <Preference
                android:key="keys_assist_long_press"
                android:title="@string/keys_action_long"
                android:dependency="enable_hardware_rebind" />

            <Preference
                android:key="keys_assist_double_tap"
                android:title="@string/keys_action_double"
                android:dependency="enable_hardware_rebind" />
        </PreferenceCategory>

        <PreferenceCategory
            android:key="button_keys_appSwitch"
            android:title="@string/keys_app_switch_press_title">

            <Preference
                android:key="keys_app_switch_press"
                android:title="@string/keys_action_normal"
                android:dependency="enable_hardware_rebind" />

            <Preference
                android:key="keys_app_switch_long_press"
                android:title="@string/keys_action_long"
                android:dependency="enable_hardware_rebind" />

            <Preference
                android:key="keys_app_switch_double_tap"
                android:title="@string/keys_action_double"
                android:dependency="enable_hardware_rebind" />
        </PreferenceCategory>

        <PreferenceCategory
            android:key="button_keys_volume"
            android:title="@string/keys_volume_key_title">

            <org.slim.preference.SlimSystemSettingSwitchPreference
                android:key="volume_keys_control_media_stream"
                android:title="@string/volume_keys_control_media_stream"
                android:defaultValue="false"
                android:summaryOn="@string/volume_keys_control_media_stream_on_summary"
                android:summaryOff="@string/volume_keys_control_media_stream_off_summary" />

            <org.slim.preference.SlimSystemSettingSwitchPreference
                android:key="swap_volume_keys_on_rotation"
                android:title="@string/swap_volume_buttons_title"
                android:defaultValue="false"
                android:summary="@string/swap_volume_buttons_summary" />

		</PreferenceCategory>

        <PreferenceCategory
            android:key="advanced_media_controls"
            android:title="@string/advanced_media_controls">

            <!-- Volume Steps -->
            <PreferenceScreen
                android:key="volume_steps"
                android:title="@string/volume_steps_title"
                android:fragment="com.android.settings.slim.VolumeSteps" />

            <org.slim.preference.SlimGlobalSettingSwitchPreference
                android:key="bt_abs_vol_ctrl_enabled"
                android:title="@string/bt_absolute_volume_control"
                android:defaultValue="true"
                android:summaryOn="@string/bt_absolute_volume_control_on_summary"
                android:summaryOff="@string/bt_absolute_volume_control_off_summary" />

            <org.slim.preference.SlimGlobalSettingSwitchPreference
                android:key="hdmi_volume_ctrl_enabled"
                android:title="@string/hdmi_volume_ctrl"
                android:defaultValue="false"
                android:summaryOn="@string/hdmi_volume_ctrl_on_summary"
                android:summaryOff="@string/hdmi_volume_ctrl_off_summary" />

		</PreferenceCategory>

</PreferenceScreen>
